tests/snapshots/examples_fixtures/async__regression_cross_module_async__Lib.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/async/regression_cross_module_async/Lib.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
